<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="15dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="5dp"
            android:layout_gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdb"
                android:textColor="@color/white"
                app:textStartPadding="10dp"
                app:textEndPadding="10dp"
                app:chipBackgroundColor="@color/chip1"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:textStartPadding="10dp"
                app:textEndPadding="10dp"
                app:chipBackgroundColor="@color/chip2"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:textStartPadding="10dp"
                app:textEndPadding="10dp"
                app:chipBackgroundColor="@color/chip3"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:textStartPadding="10dp"
                app:textEndPadding="10dp"
                app:chipBackgroundColor="@color/chip4"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_read_collapse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textSize="14sp"
            android:textColor="@color/collapse"
            android:layout_marginVertical="10dp"
            android:gravity="end"
            />

        <LinearLayout
            android:id="@+id/ll_cast_crew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cast"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/crew"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>